Bug 135369 - Assertion when exporting to XHTML (gtk3 only?)
Summary: Assertion when exporting to XHTML (gtk3 only?)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords: haveBacktrace
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2020-08-01 17:47 UTC by Julien Nabet
Modified: 2020-08-19 08:36 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (16.31 KB, text/plain)
2020-08-01 17:47 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2020-08-01 17:47:09 UTC
Description:
Hello,

On pc Debian x86-64 with master sources updated today, I got an assertion when exporting to XHTML.

Steps to Reproduce:
With a debug build:
1. Launch Writer
2. File/export XHTML format

Actual Results:
Assertion

Expected Results:
No Assertion


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+
Build ID: dc5d8d39e229b2fb1091c179942e6dae9d160101
CPU threads: 12; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Calc: threaded
Comment 1 Julien Nabet 2020-08-01 17:47:34 UTC
Created attachment 163852 [details]
bt with debug symbols
Comment 2 Julien Nabet 2020-08-01 17:48:32 UTC
Caolán: thought you might be interested in this one since it's specific to gtk3.
Also, it's very straightforward to reproduce.
Comment 3 Caolán McNamara 2020-08-02 16:24:31 UTC
I feel this depends on the the theme. I bet you have a missing icon (like I do) for the "new document" toolbar item in the standard toolbar. And this is somehow connected with https://cgit.freedesktop.org/libreoffice/core/commit/?id=789f67940af461c18b0a2ffbc6313b91fb08f26a though maybe only in some sense that an incremental build isn't picking up on those changes correctly
Comment 4 Julien Nabet 2020-08-02 17:21:18 UTC
(In reply to Caolán McNamara from comment #3)
> I feel this depends on the the theme. I bet you have a missing icon (like I
> do) for the "new document" toolbar item in the standard toolbar. And this is
> somehow connected with
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=789f67940af461c18b0a2ffbc6313b91fb08f26a though maybe only in some sense
> that an incremental build isn't picking up on those changes correctly

Thank you for the feedback. I launched a "make clean && make" to build from scratch. I'll keep you informed.
Comment 5 Julien Nabet 2020-08-02 19:02:49 UTC
I could still reproduce this :-(
Comment 6 Commit Notification 2020-08-02 20:07:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f716fd1580bcc6042afaab9beba24ca6cbcb1c73

tdf#135369 on removing an image link, ensure the linked to image is in the list

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2020-08-02 20:12:42 UTC
I think the problem as as I tried to explain in the commit message. The inclusion of images that only have links didn't work.
Comment 8 Julien Nabet 2020-08-02 21:08:04 UTC
It works now, thank you!

I just noticed this during build with master sources updated after patch:
/home/julien/lo/libreoffice/instdir/program/python-core-3.8.4/lib/zipfile.py:1517: UserWarning: Duplicate name: 'cmd/ar/sc_bulletsandnumberingdialog.svg'
  return self._open_to_write(zinfo, force_zip64=force_zip64)
/home/julien/lo/libreoffice/instdir/program/python-core-3.8.4/lib/zipfile.py:1517: UserWarning: Duplicate name: 'cmd/ar/sc_bulletsandnumberingdialog.png'
  return self._open_to_write(zinfo, force_zip64=force_zip64)
Comment 9 Commit Notification 2020-08-19 08:36:52 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/573aa68c4114886870a0a0af1dfadf462fa2b34e

Related: tdf#135369 Handle missing icons in ImplImage

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.