Related: tdf#135369 Handle missing icons in ImplImage

Don't see a reason for returning false only if the
missing icon is of a command with arguments.

Change-Id: I06caa806ee86212d436bbb5a4dae5ee8096e060b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/100965
Tested-by: Jenkins
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>